--- a/projetos/templates/projetos/lista_feedback_estudantes.html
+++ b/projetos/templates/projetos/lista_feedback_estudantes.html
@@ -17,6 +17,12 @@
     
     {% comment %} Para chamar os Tooltips {% endcomment %}
     <script>{% include "tooltip.js" %}</script>
+
+    <style>
+      canvas {
+        background-color: #FAFAFA;
+      }
+    </style>
 {% endblock %}
 
 {% block content %}
@@ -93,20 +99,15 @@
       {% endfor %}
     </table>
   </div>
-  
 
-  <p>&nbsp;</p>
-
-  <div id="canvas-holder">
-      <canvas style="background-color: #eee;" id="chart-recomendaria"></canvas>
-      <p>&nbsp;</p>
-      <canvas style="background-color: #eee;"  id="chart-primeira_opcao"></canvas>
-      <p>&nbsp;</p>
-      <canvas style="background-color: #eee;"  id="chart-proposta"></canvas>
-      <p>&nbsp;</p>
-      <canvas style="background-color: #eee;"  id="chart-trabalhando"></canvas>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 mt-4" id="chart-recomendaria"></div>
+      <div class="col-lg-6 mt-4" id="chart-primeira_opcao"></div>
+      <div class="col-lg-6 mt-4" id="chart-proposta"></div>
+      <div class="col-lg-6 mt-4" id="chart-trabalhando"></div>
+    </div>
   </div>
-
 
   <p>&nbsp;</p>
   <p>&nbsp;</p>
@@ -116,16 +117,22 @@
   </table>
 
   <script>
-    comentarios.forEach(function(texto, i) {
-      $('#ComentariosTable tr:last').after("<tr><td>" + texto + "</td></tr>");
-    })
+    if(comentarios.length) {
+      comentarios.forEach(function(texto, i) {
+        $('#ComentariosTable tr:last').after("<tr><td>" + texto + "</td></tr>");
+      })
+    } else {
+      $("#ComentariosTable").remove();
+    }
   </script>
 
   <p>&nbsp;</p>
   <p>&nbsp;</p>
 
-  <div class="chart-container" style="position: relative; max-width:64vh">
-      <canvas id="bar-feedbacks"></canvas>
+  <div class="container">
+    <div class="row">
+      <div class="col"><canvas id="bar-feedbacks"></canvas></div>
+    </div>
   </div>
 
   <p>&nbsp;</p>
@@ -387,18 +394,37 @@
       var bar_feedbacks = document.getElementById('bar-feedbacks').getContext('2d');
       window.projeto = new Chart(bar_feedbacks, config_feedbacks);
 
-      var context_recomendaria = $("#chart-recomendaria").get(0).getContext('2d'); // REFERENTE AO PIE CHART
-      window.myPie = new Chart(context_recomendaria, config_recomendaria); // REFERENTE AO PIE CHART
+      if(recomendaria.some(item => item !== 0)) {
+        $('#chart-recomendaria').append($('<canvas></canvas>'));
+        var context_recomendaria = $("#chart-recomendaria canvas").get(0).getContext('2d'); // REFERENTE AO PIE CHART
+        window.myPie = new Chart(context_recomendaria, config_recomendaria); // REFERENTE AO PIE CHART
+      } else {
+        $("#chart-recomendaria").remove();
+      }
 
-      var context_primeira_opcao = $("#chart-primeira_opcao").get(0).getContext('2d'); // REFERENTE AO PIE CHART
-      window.myPie2 = new Chart(context_primeira_opcao, config_primeira_opcao); // REFERENTE AO PIE CHART
+      if(primeira_opcao.some(item => item !== 0)) {
+        $('#chart-primeira_opcao').append($('<canvas></canvas>'));
+        var context_primeira_opcao = $("#chart-primeira_opcao canvas").get(0).getContext('2d'); // REFERENTE AO PIE CHART
+        window.myPie2 = new Chart(context_primeira_opcao, config_primeira_opcao); // REFERENTE AO PIE CHART
+      } else {
+        $("#chart-primeira_opcao").remove();
+      }
 
-      var context_proposta = $("#chart-proposta").get(0).getContext('2d'); // REFERENTE AO PIE CHART
-      window.myPie3 = new Chart(context_proposta, config_proposta); // REFERENTE AO PIE CHART
+      if(proposta.some(item => item !== 0)) {
+        $('#chart-proposta').append($('<canvas></canvas>'));
+        var context_proposta = $("#chart-proposta canvas").get(0).getContext('2d'); // REFERENTE AO PIE CHART
+        window.myPie3 = new Chart(context_proposta, config_proposta); // REFERENTE AO PIE CHART
+      } else {
+        $("#chart-proposta").remove();
+      }
 
-      var context_trabalhando = $("#chart-trabalhando").get(0).getContext('2d'); // REFERENTE AO PIE CHART
-      window.myPie4 = new Chart(context_trabalhando, config_trabalhando); // REFERENTE AO PIE CHART
-
+      if(trabalhando.some(item => item !== 0)) {
+        $('#chart-trabalhando').append($('<canvas></canvas>'));
+        var context_trabalhando = $("#chart-trabalhando canvas").get(0).getContext('2d'); // REFERENTE AO PIE CHART
+        window.myPie4 = new Chart(context_trabalhando, config_trabalhando); // REFERENTE AO PIE CHART
+      } else {
+        $("#chart-trabalhando").remove();
+      }
     }
 
       function carrega_pagina() {
