--- a/professores/templates/professores/bancas_tabela.html
+++ b/professores/templates/professores/bancas_tabela.html
@@ -7,7 +7,12 @@
 
 {% block head %}
   {% load static %}
+
+  <link rel="stylesheet" href="{% static 'bootstrap-select-1.13.14/dist/css/bootstrap-select.min.css' %}">
+  <script src="{% static 'bootstrap-select-1.13.14/dist/js/bootstrap-select.min.js' %}"></script>
+
   {% include "tabelas_includes.html" %}
+
 {% endblock %}
 
 {% block content %}
@@ -18,6 +23,23 @@
 
   {% include "edicoes.html" %}
 
+
+  <div class="row align-items-start mb-2" style="display: inline-block; margin-right: 3px;">
+    <div class="ml-3">
+      <div class="input-group input-group-sm">
+          <div class="input-group-prepend">
+            <label class="to_label input-group-text" for="filterEdicao" onClick="recarregar_pagina()"><span class="to_hide">Avaliador</span></label>
+          </div>
+          <select id="avaliador" class="selectpicker form-control form-control-sm" data-style="mr-sm border " data-width="10em"
+                  title="Nada selecionado"
+                  multiple>
+            <option selected="selected" title="Insper">Insper</option>
+            <option selected="selected" title="Externo">Externo</option>
+          </select>
+      </div>
+    </div>
+  </div>
+
   <div class="atualizar">
 
     <div class="table-responsive">
@@ -25,19 +47,28 @@
         <table id="BancasTable" class="table table-bordered table-hover table-sm" style="width: auto;">
           <thead class="table-info">
             <tr>
-              <th scope="col" style="text-align: center;width:300px;">Nome</th>
-              <th scope="col" style="text-align: center;width:70px;">Grupos</th>
-              <th scope="col" style="text-align: center;width:auto;">Projetos</th>
+              <th scope="col" style="text-align: center; width:300px;">Nome</th>
+              <th scope="col" style="text-align: center; width:300px;">e-mail</th>
+              <th scope="col" style="text-align: center; width:70px;">Grupos</th>
+              <th scope="col" style="text-align: center; width:auto;">Projetos</th>
             </tr>
           </thead>
           {% for membro, bancas in membros.items %}
-            <tr class="item">
-              <td>{% if membro.tipo_de_usuario == 2 %}<a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">{{membro.get_full_name}}</a>{% elif membro.tipo_de_usuario == 3 %}<a class="imprimir" href="{% url 'parceiro_detail' membro.parceiro.id %}">{{membro.get_full_name}}</a>{% elif membro.tipo_de_usuario == 4 %}<a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">{{membro.get_full_name}}</a>{% endif %} <a href="mailto:{{membro.email}}">&lt;{{membro.email}}&gt;</a></td>
+            {% if membro.tipo_de_usuario == 2 or membro.tipo_de_usuario == 4 %}
+              <tr class="item" data-user="Insper">
+                <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">{{membro.get_full_name}}</a>
+            {% elif membro.tipo_de_usuario == 3 %}
+              <tr class="item" data-user="Externo">
+                <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'parceiro_detail' membro.parceiro.id %}">{{membro.get_full_name}}</a>
+            {% else %}
+              <tr class="item"><td>Erro ao identificar usuário
+            {% endif %}</td>
+              <td><a href="mailto:{{membro.email}}">&lt;{{membro.email}}&gt;</a></td>
               <td style="text-align: center;"> 
                 {{bancas|length}}
               </td>
               <td style="text-align: left;">
-                <small>{% for banca in bancas %}&bull; {{banca.projeto.get_titulo}} [{{banca.projeto.organizacao}}]({{banca.startDate}})<br>{% endfor %}</small>
+                <small>{% for banca in bancas %}&bull; Banca {{banca.get_tipo}}: [{{banca.projeto.organizacao}}] {{banca.projeto.get_titulo}} ({{banca.startDate}})<br>{% endfor %}</small>
               </td>
             </tr>
           {% endfor %}
@@ -55,5 +86,21 @@
   </div>
 
   {% include "edicoes_ajax.html" with tabela='Bancas' %}
+
+  <script>
+    $("#avaliador").on("changed.bs.select", function (e, clickedIndex, isSelected, previousValue) {
+      table = $('#BancasTable').DataTable();
+      $.fn.dataTable.ext.search.push(
+        function(settings, data, dataIndex) {
+          if(table) {
+            {% comment %} Somente mostra elemento selecionado {% endcomment %}
+            var val = $('#avaliador').selectpicker('val');
+            return(val.includes($(table.row(dataIndex).node()).attr("data-user")));
+          }
+        }
+     );
+     table.draw();
+    });
+  </script>
 
 {% endblock %}
