identificando o professor das aulas

--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -51,6 +51,7 @@
         <li><a href="{% url 'coorientadores_tabela' %}">Coorientadores</a> <a href="{% url 'coorientadores_tabela_completa' %}">(completa)</a></li>
         <li><a href="{% url 'organizacoes_tabela' %}">Organizações</a></li>
         <li><a href="{% url 'bancas_tabela' %}">Bancas</a> <a href="{% url 'bancas_tabela_completa' %}">(completa)</a></li>
+        <li><a href="{% url 'aulas_tabela' %}">Aulas</a></li>
     </ul>
 
     <hr>
