--- a/users/templates/users/profile_detail.html
+++ b/users/templates/users/profile_detail.html
@@ -36,7 +36,7 @@
   {% endif %}
   <br><br>
   <form action="{% url 'password_change' %}">
-    <input type="submit" value="Atualizar Senha" />
+    <input class="btn btn-primary" type="submit" value="Atualizar Senha" />
   </form>
 
 {% endblock %}
