--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -54,6 +54,16 @@
       </div>
   {% endif %}
   
+  {% if aulas %}
+    <hr>
+    <h4>Aula(s) Ministrada(s)</h4>
+    <ol>
+      {% for aula in aulas %}
+        <li> {{aula.startDate}} - {{aula.descricao}} </li>
+      {% endfor %}
+    </ol>
+  {% endif %}
+
   {% if projetos %}
     <hr>
     <h4>Projeto(s) Orientado(s)</h4>
@@ -143,7 +153,7 @@
 
   {% if user.tipo_de_usuario == 4 %}
       <a href="{% url 'edita_usuario' professor.user.id %}">
-      <button style="float: right;">Editar</button>
+      <button class="btn btn-primary" style="float: right;">Editar</button>
       </a>
   {% endif %}
 
