--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -460,7 +460,10 @@
                     <tr class="lin_aulas ano{{aula.endDate.year}} semestre" data-mes="{{aula.endDate.month}}"
                         {% if aula.startDate|dif_dias_hoje == 0 %}style="background-color: #F0FFFF;"{% endif %}>
                         <th class="colu" scope="row">{{aula.endDate|date:"d/m"}}<span class="t_f">/{{aula.endDate.year}}</span><span class="t_s">/{{aula.endDate|date:"y"}}</span></th>
-                        <td class="colu">{{aula.descricao}} ({{aula.responsavel.get_full_name}})</td><td class="colu">{{aula.location}}</td>
+                        <td class="colu">
+                          {{aula.descricao}} 
+                          {% if aula.responsavel %}({{aula.responsavel.get_full_name}}){% endif %}
+                        </td><td class="colu">{{aula.location}}</td>
                     </tr>
                   {% endfor %}
                 </tbody>
