sistema para estudantes enviarem arquivos/relatorios

--- a/estudantes/templates/estudantes/submissao_documento.html
+++ b/estudantes/templates/estudantes/submissao_documento.html
@@ -24,58 +24,80 @@
 
 {% block content %}
 
-    <br>
-    <h4>Submissão de Documentos</h4>
+  <span class="titulo">Submissão de Documentos</span>
 
-    Projeto: {{projeto.get_titulo}}<br>
-    Semestre: {{projeto.ano}}.{{projeto.semestre}}<br>
-    <br>
+  Projeto: {{projeto.get_titulo}}<br>
+  Orientador: {{projeto.orientador.user.get_full_name}} <a href="mailto:{{projeto.orientador.user.email}}">&lt;{{projeto.orientador.user.email}}&gt;</a><br>
+  Semestre: {{projeto.ano}}.{{projeto.semestre}}<br>
+  <br>
 
-    {% for item in itens %}
-      {% with dias_ate=item.2.endDate|dif_dias_hoje dias=14 %} {% comment %} Eventos são mostrados duas semanas antes do prazo {% endcomment %}
-
+  {% for item in itens %}
+    {% with dias_ate=item.2.endDate|dif_dias_hoje dias=14 %} {% comment %} Eventos são mostrados duas semanas antes do prazo {% endcomment %}
       <div {% if dias_ate > dias and user.tipo_de_usuario == 1 %}style="display:none;"{% endif %}>
-          <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>
-          <b>{{item.0.nome}}</b> [prazo {{item.2.endDate}}]: </span><a 
-            data-toggle="tooltip" data-html="true" animation="true" title="Adicionar documento"
-            class="open-documento {% if dias_ate > dias %}lightgrey{% endif %}"
-            {% comment %} data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id %}"> {% endcomment %}
-            data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id item.0.id %}">
-
-            {% if dias_ate > dias %}+{% else %}&#10133;{% endif %}	
-          </a><br>
-          <ul style="padding-left: 22px; width: fit-content;">
-          {% for documento in item.1 %}
-            <li style="list-style-type:'&#128463; ';">
+        <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>
+        <b>{{item.0.nome}}</b> [prazo {{item.2.endDate}}]: </span><a id="adiciona"
+          class="open-documento {% if dias_ate > dias %}lightgrey{% endif %}"
+          data-toggle="tooltip" data-html="true" animation="true" 
+          {% if item.1.last %}
+            title="Substitui documento"
+            data-url="{% url 'adiciona_documento_estudante' item.0.nome item.1.last.id %}"
+          {% else %}
+            title="Adicionar documento"
+            data-url="{% url 'adiciona_documento_estudante' item.0.nome %}"
+          {% endif %}
+          onClick="check_prazo('{{item.2.endDate|date:"Y-m-d"}}T23:59:59');"
+          >
+          {% if dias_ate > dias %}+{% else %}{% if item.1.last %}<b>&#128472;</b>{% else %}&#10133;{% endif %}{% endif %}
+        </a><br>
+        <ul style="padding-left: 22px; width: fit-content;">
+        {% for documento in item.1 %}
+          <li style="list-style-type:'&#128463; ';">
+            {% if forloop.first%}<b>{% endif %}
             {% if documento.documento and documento.link %}
               {{documento.data}} - {{documento}}
-              <a data-toggle="tooltip" data-html="true" animation="true" title="Entregue"
-                 class="{% if dias_ate > dias %}lightgrey{% endif %}"
-                 href="../..{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">(documento)</a>
-              <a data-toggle="tooltip" data-html="true" animation="true" title="Entregue" 
-                 class="{% if dias_ate > dias %}lightgrey{% endif %}"
-                 href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
+              <a 
+                {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
+                class="{% if dias_ate > dias %}lightgrey{% endif %}"
+                href="../..{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">(documento)</a>
+              <a 
+                {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
+                class="{% if dias_ate > dias %}lightgrey{% endif %}"
+                href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
             {% else %}
               {% if documento.documento %}
-                <a data-toggle="tooltip" data-html="true" animation="true" title="Entregue"
-                   class="{% if dias_ate > dias %}lightgrey{% endif %}"
-                   href="../..{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">{{documento.data}} - {{documento}}</a>
+                <a 
+                  {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
+                  class="{% if dias_ate > dias %}lightgrey{% endif %}"
+                  href="../..{{MEDIA_URL}}{{documento.documento}}" target="_blank" rel="noopener noreferrer">{{documento.data}} - {{documento}}</a>
               {% endif %}
               {% if documento.link %}
-                <a data-toggle="tooltip" data-html="true" animation="true" title="Entregue"
-                   class="{% if dias_ate > dias %}lightgrey{% endif %}"
-                   href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.data}} - {{documento}}</a>
+                <a
+                  {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
+                  class="{% if dias_ate > dias %}lightgrey{% endif %}"
+                  href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.data}} - {{documento}}</a>
               {% endif %}
             {% endif %}
-            </li>
-          {% empty %}
-            Não entregue
-          {% endfor %} 
-          </ul><br>
-        </div>
-      {% endwith %}
-    {% endfor %} 
+            {% if documento.data|diff_days:item.2.endDate > 0 %}<span style="color: red;">[ENTREGUE APÓS PRAZO]</span>{% endif %}
+            {% if forloop.first%}</b>{% endif %}  
+          </li>
+        {% empty %}
+          Não entregue
+        {% endfor %} 
+        </ul><br>
+      </div>
+    {% endwith %}
+  {% endfor %} 
 
-    {% include "documento-modal.html" %}
+  {% include "documento-modal.html" %}
+
+  <script>
+    function check_prazo(prazo) {
+      data_prazo = new Date(prazo);
+      const now = new Date();
+      if(now-data_prazo>0) {
+        return alert("A entrega será fora do prazo!");
+      }
+    }
+  </script>
 
 {% endblock %}
