--- a/documentos/templates/documentos/contratos_assinados.html
+++ b/documentos/templates/documentos/contratos_assinados.html
@@ -148,7 +148,7 @@
                 <small style="position:absolute; top:0; left:0; cursor:pointer;">
                   <a
                     class="open-documento"
-                    data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 0 %}"
+                    data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 'Contrato com Organização Parceira' %}"
                     >&#10133;</a>
                 </small>
 
