--- a/professores/templates/professores/planos_de_orientacao_todos.html
+++ b/professores/templates/professores/planos_de_orientacao_todos.html
@@ -53,13 +53,13 @@
                 <a style="color:green"
                  data-toggle="tooltip" data-html="true" animation="true" title="Entregue"
                  class="open-documento"
-                 data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 28 documento.id %}">
+                 data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 'Plano de Orientação' documento.id %}">
                   <font size="6">&#128463;</font>
                 </a>
                 <a style="color:green"
                  data-toggle="tooltip" data-html="true" animation="true" title="Entregue"
                  class="open-documento"
-                 data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 28 documento.id %}">
+                 data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 'Plano de Orientação' documento.id %}">
                   <font size="6">&#128279;</font>
                 </a>
               {% else %}
@@ -67,7 +67,7 @@
                   <a style="color:green"
                    data-toggle="tooltip" data-html="true" animation="true" title="Entregue"
                    class="open-documento"
-                   data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 28 documento.id %}">
+                   data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 'Plano de Orientação' documento.id %}">
                     <font size="6">&#128463;</font>
                   </a>
                 {% endif %}
@@ -75,7 +75,7 @@
                   <a style="color:green"
                    data-toggle="tooltip" data-html="true" animation="true" title="Entregue"
                    class="open-documento"
-                   data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 28 documento.id %}">
+                   data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 'Plano de Orientação' documento.id %}">
                     <font size="6">&#128279;</font>
                   </a>
                 {% endif %}
@@ -90,7 +90,7 @@
               <a style="color:red"
                data-toggle="tooltip" data-html="true" animation="true" title="Não entregue"
                class="open-documento"
-               data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 28 %}">
+               data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 'Plano de Orientação' %}">
                 <font size="6">&#128460;</font>
               </a>
             {% endfor %}
